--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "moment": "^2.24.0",
     "ng2-charts": "^1.6.0",
     "ng2-currency-mask": "^5.3.1",
