--- a/angular.json
+++ b/angular.json
@@ -3,21 +3,17 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "desafio": {
+    "desafio-sankhya-client": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "sass"
-        }
-      },
+      "schematics": {},
       "architect": {
-        "build": { 
+        "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/desafio",
+            "outputPath": "dist/desafio-sankhya-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -62,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "desafio:build"
+            "browserTarget": "desafio-sankhya-client:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "desafio:build:production"
+              "browserTarget": "desafio-sankhya-client:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "desafio:build"
+            "browserTarget": "desafio-sankhya-client:build"
           }
         },
         "test": {
@@ -84,7 +80,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
@@ -107,7 +103,7 @@
         }
       }
     },
-    "desafio-e2e": {
+    "desafio-sankhya-client-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -116,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "desafio:serve"
+            "devServerTarget": "desafio-sankhya-client:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "desafio:serve:production"
+              "devServerTarget": "desafio-sankhya-client:serve:production"
             }
           }
         },
@@ -136,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "desafio"
+  "defaultProject": "desafio-sankhya-client"
 }
